--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,9 @@
     "lodash": "~2.4.1",
     "angular-socket-io": "~0.6.0",
     "angular-ui-router": "~0.2.10",
-    "pdfjs-dist": "~1.0.931"
+    "pdfjs-dist": "~1.0.931",
+    "angular-upload": "~1.0.11",
+    "angular-file-uploader": "~1.0.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
