--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,9 @@
     "angular-ui-router": "~0.2.10",
     "pdfjs-dist": "~1.0.931",
     "angular-upload": "~1.0.11",
-    "angular-file-uploader": "~1.0.0"
+    "angular-file-uploader": "~1.0.0",
+    "aws-sdk-js": "~2.1.2",
+    "toastr": "2.1.0"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
